<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="50dp"
    android:id="@+id/linear_layout">
    <TextView
        android:id="@+id/greetings_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Hello World!"
        android:textColor="#F45990"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="auto filled text"
        android:hint="@string/type_your_name"
        android:inputType="text"
        android:textColor="#3907AF"
        android:textSize="30sp" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/martial_status_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/married"
        android:textSize="20sp"/>

    <CheckBox
        android:id="@+id/level_beginner_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beginner"
        android:textSize="20sp"/>

    <CheckBox
        android:id="@+id/level_junior_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/junior"
        android:textSize="20sp"/>

    <ToggleButton
        android:id="@+id/switch_background_toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/dark"
        android:textOn="@string/white" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fadingEdge="vertical"
        android:text="@string/see_result" />

    <Button
        android:id="@+id/next_activity_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fadingEdge="vertical"
        android:text="@string/go_to_next_activity"
        />
</LinearLayout>

</ScrollView>