<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_your_name_second_activity"
        android:inputType="textPersonName"
        android:ems="15"
        android:autofillHints="" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/where_are_you_from"
        android:inputType="text"
        android:ems="15"
        android:autofillHints="" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:ems="15"
        android:autofillHints="" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_your_email"
        android:inputType="textEmailAddress"
        android:ems="15"
        android:autofillHints="" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_your_age"
        android:inputType="number"
        android:ems="15"
        android:autofillHints="" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_your_password"
        android:inputType="textPassword"
        android:ems="15"
        android:autofillHints="" />

    <CalendarView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>